--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -25,7 +25,7 @@ Rolling technique is used to check a specific part of the action of the animatio
 ## New Features
 
 - [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images based on filename and numbers e.g., Joe0001.png', 'Joe0002.png' and so on. (by [davidlamhauge][david])
-- [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline. (by **[davidlamhauge](https://github.com/davidlamhauge)**)
+- [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline. (by [davidlamhauge][david])
 - Added support for transparency in exporting WebM and APNG.
 - [#1078](https://github.com/pencil2d/pencil/pull/1078) Be able to set grid size in Preferences. (by [davidlamhauge][david])
 - [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format
@@ -35,13 +35,13 @@ Rolling technique is used to check a specific part of the action of the animatio
 
 ## Translations
 
-There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. It's  exciting to see Pencil2D being more accessible through translation. Joining us on [Transifex](https://www.transifex.com/pencil2d/) to translate Pencil2D to your language or improve the existing translations!
+There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. It's always exciting to see Pencil2D being more accessible through translations. Joining us on [Transifex](https://www.transifex.com/pencil2d/) to translate Pencil2D to your language or improve the existing translations!
 
 ## Enhancements
 
 - Improved stroke accuracy by using Qt tablet events.
 - Improved the sound key length accuracy.
-- [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by 0x72D0)
+- [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by [0x72D0](https://github.com/0x72D0))
 - [#1091](https://github.com/pencil2d/pencil/issues/1091) Giving filename suggestion when creating a new layer.
 - Improved the quality of exporting an .avi video.
 - [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember the last Fps and camera sizes as the default values when you create a new project.
@@ -70,3 +70,4 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 ## Help improve Pencil2D
 
 Pencil2D is developed by passionate people in their spare time. If you like this software, and you want it to get better, you can help! Please visit the [Contribute Page](https://www.pencil2d.org/contribute/) for further information.
+
