Add more information to v0.6.3 release notes

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -20,32 +20,32 @@ Flipping & Rolling are two techniques that allow animators to quickly preview th
 
 Flipping is used mostly for the process known as in-betweening with 3 drawings. By pressing `Alt+Z`, you can glance through the first drawing (previous key), the last drawing (next key) and the currently edited inbetween.
 
-Rolling technique is used to check a specific part of the action of the animation. By pressing `Alt+X`, you can preview 5 drawings in ordered sequence flipping with all your available fingers. 
+Rolling technique is used to check a specific part of the action of the animation. By pressing `Alt+X`, you can preview 5 drawings in ordered sequence flipping with all your available fingers.
 
 ## New Features
 
-- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images based on filename and numbers e.g., Joe0001.png', 'Joe0002.png' and so on. (by [davidlamhauge][david])
-- [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline. (by [davidlamhauge][david])
-- Added support for transparency in exporting WebM and APNG.
-- [#1078](https://github.com/pencil2d/pencil/pull/1078) Be able to set grid size in Preferences. (by [davidlamhauge][david])
-- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format
+- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images based on filename and numbers e.g., Joe0001.png', 'Joe0002.png' and so on (by [davidlamhauge][david]).
+- [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline (by [davidlamhauge][david]).
+- [#1115](https://github.com/pencil2d/pencil/pull/1115) Added support for transparency in exporting WebM and APNG.
+- [#1078](https://github.com/pencil2d/pencil/pull/1078) Be able to set grid size in Preferences (by [davidlamhauge][david]).
+- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format (by [nevdokimof](https://github.com/nevdokimof)).
 - [#1126](https://github.com/pencil2d/pencil/pull/1126) Check for updates.
 - [#1136](https://github.com/pencil2d/pencil/pull/1136) Added an option to export key frames only when exporting image sequence.
 - [#1145](https://github.com/pencil2d/pencil/pull/1145) Added zoom shortcuts from 25% up to 400% as 1, 2, 3, 4 and Shift+2, 3, 4.
 
 ## Translations
 
-There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. It's always exciting to see Pencil2D being more accessible through translations. Joining us on [Transifex](https://www.transifex.com/pencil2d/) to translate Pencil2D to your language or improve the existing translations!
+There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. It's always exciting to see Pencil2D being more accessible through translations. Joining us on [Transifex](https://www.transifex.com/pencil2d/) to translate Pencil2D into your language or improve the existing translations!
 
 ## Enhancements
 
-- Improved stroke accuracy by using Qt tablet events.
+- [#1059](https://github.com/pencil2d/pencil/pull/1059), [#1168](https://github.com/pencil2d/pencil/pull/1168) Improved stroke accuracy by using Qt tablet events.
 - Improved the sound key length accuracy.
 - [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by [0x72D0](https://github.com/0x72D0))
 - [#1091](https://github.com/pencil2d/pencil/issues/1091) Giving filename suggestion when creating a new layer.
-- Improved the quality of exporting an .avi video.
-- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember the last Fps and camera sizes as the default values when you create a new project.
-- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline. 
+- [#1100](https://github.com/pencil2d/pencil/issues/1100) Improved the quality of exporting an .avi video.
+- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember the last FPS and camera sizes as the default values when you create a new project.
+- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline.
 
 ## Fixes
 
@@ -57,17 +57,24 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1096](https://github.com/pencil2d/pencil/issues/1096) Fix crash and related issues on layer delete.
 - [#1095](https://github.com/pencil2d/pencil/issues/1095) Fix move tool crash on camera layer.
 - [#1090](https://github.com/pencil2d/pencil/issues/1090) Fix image export issues (by [przet](https://github.com/przet)).
-- [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on latest mac os.
+- [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on latest macOS.
 - [#1139](https://github.com/pencil2d/pencil/pull/1139) Fix audio volume in movie export if the project contains multiple audio clips.
 - [#926](https://github.com/pencil2d/pencil/issues/926) Scrubber moves to the start of the range when hitting play button if outside the range.
 - [#1157](https://github.com/pencil2d/pencil/issues/1157) Fixed audio synchronization issue.
-- [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project.
+- [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
 - [#940](https://github.com/pencil2d/pencil/pull/940) Fixed: project corrupted because comma is used as decimal separator in some places instead of period.
 - Fix auto-crop being disabled in duplicate frames.
 - [#1092](https://github.com/pencil2d/pencil/issues/1092) Application icon disappeared after loading a file.
 - [#1175](https://github.com/pencil2d/pencil/issues/1175)  Color wheel sometimes went greyscale.
 
+## Known Issues
+
+- [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use the [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
+- [#940](https://github.com/pencil2d/pencil/pull/940) Possibly unfixed: project corrupted because comma is used as decimal separator in some places instead of period.
+- [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
+- [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
+- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase content on Windows when using the Alt+Tab shortcut.
+
 ## Help improve Pencil2D
 
 Pencil2D is developed by passionate people in their spare time. If you like this software, and you want it to get better, you can help! Please visit the [Contribute Page](https://www.pencil2d.org/contribute/) for further information.
-
