- Updated missing PR's and commits to complement existing fixes, enhancements and features that were added. - Added explanation on how the hacktoberfest event acted as a commit contribution motivator - Added section to explain how the new versioning scheme will work

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -11,10 +11,21 @@ comments: true
 
 After 6 months of work, we're finally ready to wrap up the version 0.6.3 with new features, enhancements and bug fixes that have been worked on by the community. [Please download it here][0] and enjoy animating.
 
+Many of these fixes and enhancements were made possible by contributors around the world that learned of our project through the [#Hacktoberfest2018](https://www.pencil2d.org/2018/10/hacktoberfest-pencil2d.html) event sponsored by [Digital Ocean](https://www.digitalocean.com/) and [Github](https://github.com)
+
+To everyone that contributed and made this release possible. Thank you!
+
 [0]: https://www.pencil2d.org/download
 [david]: https://github.com/davidlamhauge
+[mapreri]: https://github.com/mapreri
+[nevdokimof]: https://github.com/nevdokimof
+
+## A new scheme for bug fix and feature release
+
+
 
 ## Flipping / Rolling
+[#1131](https://github.com/pencil2d/pencil/pull/1131) (by [davidlamhauge][david])
 
 Flipping & Rolling are two techniques that allow animators to quickly preview their animation work.
 
@@ -24,14 +35,14 @@ Rolling technique is used to check a specific part of the action of the animatio
 
 ## New Features
 
-- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images based on filename and numbers e.g., Joe0001.png', 'Joe0002.png' and so on (by [davidlamhauge][david]).
-- [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline (by [davidlamhauge][david]).
+- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images as new layers on specific frames based on filename and numbering postfix e.g., Joe0001.png', 'Joe0002.png', etc (by [davidlamhauge][david]).
+- [#1074](https://github.com/pencil2d/pencil/issues/1074), [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline (by [davidlamhauge][david]).
 - [#1115](https://github.com/pencil2d/pencil/pull/1115) Added support for transparency in exporting WebM and APNG.
 - [#1078](https://github.com/pencil2d/pencil/pull/1078) Be able to set grid size in Preferences (by [davidlamhauge][david]).
-- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format (by [nevdokimof](https://github.com/nevdokimof)).
-- [#1126](https://github.com/pencil2d/pencil/pull/1126) Check for updates.
+- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format (by [nevdokimof][nevdokimof]).
+- [#1126](https://github.com/pencil2d/pencil/pull/1126) Check for Pencil2D updates. (+ Added forum/discord links in Help menu.)
 - [#1136](https://github.com/pencil2d/pencil/pull/1136) Added an option to export key frames only when exporting image sequence.
-- [#1145](https://github.com/pencil2d/pencil/pull/1145) Added zoom shortcuts from 25% up to 400% as 1, 2, 3, 4 and Shift+2, 3, 4.
+- [#1145](https://github.com/pencil2d/pencil/pull/1145) Added zoom shortcuts from 25% up to 400% as 1, 2, 3, 4 and Shift+2, 3, 4. (by [davidlamhauge][david])
 
 ## Translations
 
@@ -40,32 +51,48 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 ## Enhancements
 
 - [#1059](https://github.com/pencil2d/pencil/pull/1059), [#1168](https://github.com/pencil2d/pencil/pull/1168) Improved stroke accuracy by using Qt tablet events.
-- Improved the sound key length accuracy.
+- [4f7b4bb](https://github.com/pencil2d/pencil/commit/4f7b4bb8244114c43e3742a6c1a2602ef0d41d5a) Improved the sound key length accuracy.
 - [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by [0x72D0](https://github.com/0x72D0))
-- [#1091](https://github.com/pencil2d/pencil/issues/1091) Giving filename suggestion when creating a new layer.
 - [#1100](https://github.com/pencil2d/pencil/issues/1100) Improved the quality of exporting an .avi video.
-- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember the last FPS and camera sizes as the default values when you create a new project.
-- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline.
+- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember last used FPS and camera sizes as default values when you create a new project.
+- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline. (by [davidlamhauge][david])
+- [#1176](https://github.com/pencil2d/pencil/pull/1176) Make default palette file filter for suppored formats
+- [#1065](https://github.com/pencil2d/pencil/pull/1065) Fixed error message dialog typo (by [Mattia Rizzolo][mapreri]).
+- [#1086](https://github.com/pencil2d/pencil/issues/1086), [#1087](https://github.com/pencil2d/pencil/pull/1087) Prevent layers with duplicate names 
+- [#1091](https://github.com/pencil2d/pencil/issues/1091) Number postfix name suggestion when creating a new layer.
+- [1107](https://github.com/pencil2d/pencil/pull/1107) Fix miscelaneous warnings in core_lib/structure from g++
+- [#1108](https://github.com/pencil2d/pencil/pull/1108) Improved *.gpl import algorithm
+- [#1137](https://github.com/pencil2d/pencil/pull/1137) Improve darkmode QDockWidget titlebar for macOS (Mojave)
 
 ## Fixes
 
-- Copy function (Ctrl+C) didn't work.
+- [#1089](https://github.com/pencil2d/pencil/issues/1089) Fixed Copy & Paste function (Ctrl+C / Ctrl+V) not working.
 - [#1111](https://github.com/pencil2d/pencil/pull/1111) Fix rename optimization during file save.
 - [#1108](https://github.com/pencil2d/pencil/issues/1108) Improved .gpl import.
 - [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed g++ compiler warnings.
 - [#1101](https://github.com/pencil2d/pencil/issues/1101) Disable range spinboxes at startup (by [davidlamhauge][david]).
 - [#1096](https://github.com/pencil2d/pencil/issues/1096) Fix crash and related issues on layer delete.
 - [#1095](https://github.com/pencil2d/pencil/issues/1095) Fix move tool crash on camera layer.
-- [#1090](https://github.com/pencil2d/pencil/issues/1090) Fix image export issues (by [przet](https://github.com/przet)).
-- [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on latest macOS.
+- [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fix image export issues (by [przet](https://github.com/przet)).
+- [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on newer versions of macOS (e.g Mojave).
+- [#1142](https://github.com/pencil2d/pencil/pull/1142) Force light theme on newer versions of macOS (e.g Mojave)
+- [#1144](https://github.com/pencil2d/pencil/pull/1144) Renable dark mode on newer versions of macOS (e.g Mojave)
 - [#1139](https://github.com/pencil2d/pencil/pull/1139) Fix audio volume in movie export if the project contains multiple audio clips.
-- [#926](https://github.com/pencil2d/pencil/issues/926) Scrubber moves to the start of the range when hitting play button if outside the range.
+- [#926](https://github.com/pencil2d/pencil/issues/926), [#1148](https://github.com/pencil2d/pencil/pull/1148) Scrubber should move to start of range on playback, if outside the range.
 - [#1157](https://github.com/pencil2d/pencil/issues/1157) Fixed audio synchronization issue.
-- [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
+- [1093](https://github.com/pencil2d/pencil/issues/1093), [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
 - [#940](https://github.com/pencil2d/pencil/pull/940) Fixed: project corrupted because comma is used as decimal separator in some places instead of period.
-- Fix auto-crop being disabled in duplicate frames.
+- [b1064ab](https://github.com/pencil2d/pencil/commit/b1064ab8fd1748862c27dfd5c22464d470cfd05f) Fix auto-crop being disabled in duplicate frames.
 - [#1092](https://github.com/pencil2d/pencil/issues/1092) Application icon disappeared after loading a file.
 - [#1175](https://github.com/pencil2d/pencil/issues/1175)  Color wheel sometimes went greyscale.
+- [#1181](https://github.com/pencil2d/pencil/pull/1181) Fix canvas bugs
+- [#1154](https://github.com/pencil2d/pencil/issues/1154),[#1155](https://github.com/pencil2d/pencil/pull/1155) Fix pressure artifacts at end of brush stroke
+- [#1188](https://github.com/pencil2d/pencil/pull/1188) Miscellaneous fixes: Fixes regression for [#677](https://github.com/pencil2d/pencil/issues/677). Fixes duplicate selection box.
+- [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Range input incorrectly activated on startup
+- [#1094](https://github.com/pencil2d/pencil/issues/1094), [#1104](https://github.com/pencil2d/pencil/pull/1104) Fixed *.gpl (Gimp Palette) file import algorithm. (by [nevdokimof][nevdokimof])
+- [#1135](https://github.com/pencil2d/pencil/pull/1135) Fix Error on digit count for numbered sequence file import
+- [#1141](https://github.com/pencil2d/pencil/pull/1141), [#1132](https://github.com/pencil2d/pencil/pull/1132) Resolved miscelanous warnings (NULL and C-style Casts) (by [davidlamhauge][david])
+- [aafd048](https://github.com/pencil2d/pencil/commit/aafd048a20abbfe5d1e62647fc64ff524c5a4be7) Fix: mistakingly empty the filename of source keyframe when duplicating a frame
 
 ## Known Issues
 
@@ -74,6 +101,13 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
 - [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase content on Windows when using the Alt+Tab shortcut.
+- [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
+- [#1117](https://github.com/pencil2d/pencil/issues/1117) Issue 4: The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
+- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
+- [#1177](https://github.com/pencil2d/pencil/issues/1177) Imported image position is modified by the canvas view center
+- [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
+- [#1186](https://github.com/pencil2d/pencil/issues/1186) Quick Sizing is enabled on Paint Bucket Tool, but does nothing.
+- [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working with the mouse (macOS)
 
 ## Help improve Pencil2D
 
