- Updated known issues section. Added 0.6.2 Known issues that have not been fixed - Removed section to explain release scheme. This could be done in a separate announcement.

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -20,10 +20,6 @@ To everyone that contributed and made this release possible. Thank you!
 [mapreri]: https://github.com/mapreri
 [nevdokimof]: https://github.com/nevdokimof
 
-## A new scheme for bug fix and feature release
-
-
-
 ## Flipping / Rolling
 [#1131](https://github.com/pencil2d/pencil/pull/1131) (by [davidlamhauge][david])
 
@@ -100,7 +96,7 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#940](https://github.com/pencil2d/pencil/pull/940) Possibly unfixed: project corrupted because comma is used as decimal separator in some places instead of period.
 - [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
-- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase content on Windows when using the Alt+Tab shortcut.
+- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase content on Windows when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
 - [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
 - [#1117](https://github.com/pencil2d/pencil/issues/1117) Issue 4: The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
 - [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
@@ -108,6 +104,18 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
 - [#1186](https://github.com/pencil2d/pencil/issues/1186) Quick Sizing is enabled on Paint Bucket Tool, but does nothing.
 - [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working with the mouse (macOS)
+- Playing back audio from any frame other than the first will slightly off-sync the audio in the editor. For now we recommend playing back from the beginning and gauging the sound particularly for lipsync or musicalized action.
+
+- Color Palette (Bitmap): First Swatch is unchangeable. Can’t use replace command. Use the other swatches to create your own colors or change it by editing the palette in a vector layer or via XML.
+- Color Palette (Bitmap): Swatches will only update using the Replace command when having a vector layer active. (Note: Create your custom palettes with a vector layer selected)
+- Selection Tool (Rotation): Using the SELECT ALL command (CTRL + A) and rotating a selection, will store the rotation transformation, if you create a selection and click on the drawing with the MOVE TOOL, it will rotate the selection again. Despite possible use cases this is a bug.
+- Undo: Undoing a drawing modification made on an empty frame creates a keyframe on that frame.
+- Undo: Undoing moving a keyframe to a new frame will create a blank keyframe on the place where it used to be.
+- Undo, Smudge Tool (Bitmap): You cannot UNDO the smudge tool at the moment.
+- Blur Tool (Bitmap): Pressing ALT with smudge tool doesn’t work, do not use it. Use other drawing apps for smudge effects.
+- Fill Tool (Vector): Filling a stroke requires the stroke to be selected.
+- Fill Tool (Vector): “stroke thickness” option will reset pressure sensitive lines width.
+- In general the Vector Engine is a WIP or not working as intended. Much more work will be required, please don't use it.
 
 ## Help improve Pencil2D
 
