- Removed duplicate entries

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -56,7 +56,6 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1065](https://github.com/pencil2d/pencil/pull/1065) Fixed error message dialog typo (by [Mattia Rizzolo][mapreri]).
 - [#1086](https://github.com/pencil2d/pencil/issues/1086), [#1087](https://github.com/pencil2d/pencil/pull/1087) Prevent layers with duplicate names 
 - [#1091](https://github.com/pencil2d/pencil/issues/1091) Number postfix name suggestion when creating a new layer.
-- [1107](https://github.com/pencil2d/pencil/pull/1107) Fix miscelaneous warnings in core_lib/structure from g++
 - [#1108](https://github.com/pencil2d/pencil/pull/1108) Improved *.gpl import algorithm
 - [#1137](https://github.com/pencil2d/pencil/pull/1137) Improve darkmode QDockWidget titlebar for macOS (Mojave)
 
@@ -64,9 +63,8 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 
 - [#1089](https://github.com/pencil2d/pencil/issues/1089) Fixed Copy & Paste function (Ctrl+C / Ctrl+V) not working.
 - [#1111](https://github.com/pencil2d/pencil/pull/1111) Fix rename optimization during file save.
-- [#1108](https://github.com/pencil2d/pencil/issues/1108) Improved .gpl import.
-- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed g++ compiler warnings.
-- [#1101](https://github.com/pencil2d/pencil/issues/1101) Disable range spinboxes at startup (by [davidlamhauge][david]).
+- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed miscelaneous g++ compiler warnings.
+- [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Disable range spinboxes at startup (by [davidlamhauge][david]).
 - [#1096](https://github.com/pencil2d/pencil/issues/1096) Fix crash and related issues on layer delete.
 - [#1095](https://github.com/pencil2d/pencil/issues/1095) Fix move tool crash on camera layer.
 - [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fix image export issues (by [przet](https://github.com/przet)).
@@ -76,7 +74,7 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1139](https://github.com/pencil2d/pencil/pull/1139) Fix audio volume in movie export if the project contains multiple audio clips.
 - [#926](https://github.com/pencil2d/pencil/issues/926), [#1148](https://github.com/pencil2d/pencil/pull/1148) Scrubber should move to start of range on playback, if outside the range.
 - [#1157](https://github.com/pencil2d/pencil/issues/1157) Fixed audio synchronization issue.
-- [1093](https://github.com/pencil2d/pencil/issues/1093), [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
+- [#1093](https://github.com/pencil2d/pencil/issues/1093), [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
 - [#940](https://github.com/pencil2d/pencil/pull/940) Fixed: project corrupted because comma is used as decimal separator in some places instead of period.
 - [b1064ab](https://github.com/pencil2d/pencil/commit/b1064ab8fd1748862c27dfd5c22464d470cfd05f) Fix auto-crop being disabled in duplicate frames.
 - [#1092](https://github.com/pencil2d/pencil/issues/1092) Application icon disappeared after loading a file.
@@ -84,7 +82,6 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 - [#1181](https://github.com/pencil2d/pencil/pull/1181) Fix canvas bugs
 - [#1154](https://github.com/pencil2d/pencil/issues/1154),[#1155](https://github.com/pencil2d/pencil/pull/1155) Fix pressure artifacts at end of brush stroke
 - [#1188](https://github.com/pencil2d/pencil/pull/1188) Miscellaneous fixes: Fixes regression for [#677](https://github.com/pencil2d/pencil/issues/677). Fixes duplicate selection box.
-- [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Range input incorrectly activated on startup
 - [#1094](https://github.com/pencil2d/pencil/issues/1094), [#1104](https://github.com/pencil2d/pencil/pull/1104) Fixed *.gpl (Gimp Palette) file import algorithm. (by [nevdokimof][nevdokimof])
 - [#1135](https://github.com/pencil2d/pencil/pull/1135) Fix Error on digit count for numbered sequence file import
 - [#1141](https://github.com/pencil2d/pencil/pull/1141), [#1132](https://github.com/pencil2d/pencil/pull/1132) Resolved miscelanous warnings (NULL and C-style Casts) (by [davidlamhauge][david])
