--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -5,7 +5,7 @@ tagline: ""
 categories: "Release Note"
 image: '{{ "/images/pencil_icon.png" | relative_url }}'
 author: "The Pencil2D team"
-published: false
+published: true
 comments: true
 ---
 
@@ -89,20 +89,25 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 
 ## Known Issues
 
-- [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use the [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
-- [#940](https://github.com/pencil2d/pencil/pull/940) Possibly unfixed: project corrupted because comma is used as decimal separator in some places instead of period.
+While there seems to be a growing list of Know issues, make no mistake, we are working hard on reviewing and fixing them as thoroughly as possible.
+
+- [#1192](https://github.com/pencil2d/pencil/issues/1192) When using the flipping & rolling feature, if you quickly try to drag the scrub header when the action occurs, Pencil2D will crash. (there is a fix already awaiting approval)
+- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase selection content when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
+- [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
+- [#940](https://github.com/pencil2d/pencil/pull/940) Pending improvements: project is corrupted because comma is used as decimal separator in some countries instead of period.
 - [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
-- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase content on Windows when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
 - [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
-- [#1117](https://github.com/pencil2d/pencil/issues/1117) Issue 4: The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
+- [#1117](https://github.com/pencil2d/pencil/issues/1117) The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
 - [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
 - [#1177](https://github.com/pencil2d/pencil/issues/1177) Imported image position is modified by the canvas view center
 - [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
 - [#1186](https://github.com/pencil2d/pencil/issues/1186) Quick Sizing is enabled on Paint Bucket Tool, but does nothing.
-- [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working with the mouse (macOS)
-- Playing back audio from any frame other than the first will slightly off-sync the audio in the editor. For now we recommend playing back from the beginning and gauging the sound particularly for lipsync or musicalized action.
-
+- [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working properly with the Middle Mouse Button (Win) and mouse input in general (macOS)
+- [#1196](https://github.com/pencil2d/pencil/issues/1196) A unerasable stroke appears when drawing if you turn off the pressure sensitivity checkbox with drawing tools.
+- [#1195](https://github.com/pencil2d/pencil/issues/1195) The update check prompts an error because there is currently no other update to get
+- [#1193](https://github.com/pencil2d/pencil/issues/1193) The feather slider widget (Brush Tool) has a higher max value than the input value, and any value above 96 pixels will not allow you to paint.
+- Playing back audio from any frame other than the first will slightly off-sync the audio in the editor. For now we recommend playing back sounds from the beginning and gauging the sound particularly for lipsync or musicalized action. Afterwards check your output with a dedicated video editor to avoid sync issues.
 - Color Palette (Bitmap): First Swatch is unchangeable. Can’t use replace command. Use the other swatches to create your own colors or change it by editing the palette in a vector layer or via XML.
 - Color Palette (Bitmap): Swatches will only update using the Replace command when having a vector layer active. (Note: Create your custom palettes with a vector layer selected)
 - Selection Tool (Rotation): Using the SELECT ALL command (CTRL + A) and rotating a selection, will store the rotation transformation, if you create a selection and click on the drawing with the MOVE TOOL, it will rotate the selection again. Despite possible use cases this is a bug.
