--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -62,12 +62,12 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 ## Fixes
 
 - [#1089](https://github.com/pencil2d/pencil/issues/1089) Fixed Copy & Paste function (Ctrl+C / Ctrl+V) not working.
-- [#1111](https://github.com/pencil2d/pencil/pull/1111) Fix rename optimization during file save.
-- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed miscelaneous g++ compiler warnings.
+- [#1111](https://github.com/pencil2d/pencil/pull/1111) Fixed possibly frame lost during file save.
+- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed miscellaneous g++ compiler warnings.
 - [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Disable range spinboxes at startup (by [davidlamhauge][david]).
-- [#1096](https://github.com/pencil2d/pencil/issues/1096) Fix crash and related issues on layer delete.
-- [#1095](https://github.com/pencil2d/pencil/issues/1095) Fix move tool crash on camera layer.
-- [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fix image export issues (by [przet](https://github.com/przet)).
+- [#1096](https://github.com/pencil2d/pencil/issues/1096) Fixed crash and related issues on layer delete.
+- [#1095](https://github.com/pencil2d/pencil/issues/1095) Fixed move tool crash on camera layer.
+- [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fixed image export issues (by [przet](https://github.com/przet)).
 - [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on newer versions of macOS (e.g Mojave).
 - [#1142](https://github.com/pencil2d/pencil/pull/1142) Force light theme on newer versions of macOS (e.g Mojave)
 - [#1144](https://github.com/pencil2d/pencil/pull/1144) Renable dark mode on newer versions of macOS (e.g Mojave)
@@ -97,12 +97,11 @@ While there seems to be a growing list of Know issues, make no mistake, we are w
 - [#940](https://github.com/pencil2d/pencil/pull/940) Pending improvements: project is corrupted because comma is used as decimal separator in some countries instead of period.
 - [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
-- [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
+- [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: the new palette may append or overwrite the existing palette depending on the file format.
 - [#1117](https://github.com/pencil2d/pencil/issues/1117) The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
-- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
+- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X/Y will delete the drawing instead.
 - [#1177](https://github.com/pencil2d/pencil/issues/1177) Imported image position is modified by the canvas view center
-- [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
-- [#1186](https://github.com/pencil2d/pencil/issues/1186) Quick Sizing is enabled on Paint Bucket Tool, but does nothing.
+- [#1179](https://github.com/pencil2d/pencil/issues/1179) An audio delay of 1-2 frames between in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
 - [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working properly with the Middle Mouse Button (Win) and mouse input in general (macOS)
 - [#1196](https://github.com/pencil2d/pencil/issues/1196) A unerasable stroke appears when drawing if you turn off the pressure sensitivity checkbox with drawing tools.
 - [#1195](https://github.com/pencil2d/pencil/issues/1195) The update check prompts an error because there is currently no other update to get
@@ -114,10 +113,10 @@ While there seems to be a growing list of Know issues, make no mistake, we are w
 - Undo: Undoing a drawing modification made on an empty frame creates a keyframe on that frame.
 - Undo: Undoing moving a keyframe to a new frame will create a blank keyframe on the place where it used to be.
 - Undo, Smudge Tool (Bitmap): You cannot UNDO the smudge tool at the moment.
-- Blur Tool (Bitmap): Pressing ALT with smudge tool doesn’t work, do not use it. Use other drawing apps for smudge effects.
+- Blur Tool (Bitmap): Pressing `ALT` with smudge tool doesn’t work, do not use it. Use other drawing apps for smudge effects.
 - Fill Tool (Vector): Filling a stroke requires the stroke to be selected.
 - Fill Tool (Vector): “stroke thickness” option will reset pressure sensitive lines width.
-- In general the Vector Engine is a WIP or not working as intended. Much more work will be required, please don't use it.
+- In general the Vector Engine is not ready for production use, please avoid using it for serious work.
 
 ## Help improve Pencil2D
 
